# poc-controller

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
blitz/controller/: CMakeLists.txt  main.cpp
blitz/controller/commands/: command.h  move_command.cpp  move_command.h
blitz/modules/: CMakeLists.txt
blitz/modules/core/: CMakeLists.txt
blitz/modules/core/include/: movement_interface.h
blitz/modules/tank_movement/: CMakeLists.txt
blitz/modules/tank_movement/include/: tank_movement.h
blitz/modules/tank_movement/src/: wheel_movement.cpp
blitz/modules/wheel_movement/: CMakeLists.txt
blitz/modules/wheel_movement/include/: wheel_movement.h
blitz/modules/wheel_movement/src/: wheel_movement.cpp
cmake/: RequireBoost.CMake
goliath/controller/: main.cpp
goliath/controller/commands/: command.h  move_command.cpp  move_command.h
goliath/modules/core/: CMakeLists.txt
goliath/modules/core/include/goliath/: movement_interface.h  movement_service.h
goliath/modules/tank_movement/: CMakeLists.txt
goliath/modules/tank_movement/include/goliath/: tank_movement.h
goliath/modules/tank_movement/src/: wheel_movement.cpp
goliath/modules/wheel_movement/: CMakeLists.txt
goliath/modules/wheel_movement/include/goliath/: wheel_movement.h
goliath/modules/wheel_movement/src/: wheel_movement.cpp
