cmake_minimum_required(VERSION 3.10)
project("IDP Controller" CXX)

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/ ${CMAKE_MODULE_PATH})

set(CMAKE_CXX_STANDARD 14)

set(BIN_OUTPUT ${CMAKE_BINARY_DIR}/bin)
set(BIN_OUTPUT_LIBARY ${BIN_OUTPUT}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BIN_OUTPUT_LIBARY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_OUTPUT_LIBARY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_OUTPUT})

add_subdirectory(third_party)
add_subdirectory(blitz)